# hs-web-template

./: LICENSE  README.md  cabal.project  hie.yaml
backend/: backend.cabal
backend/app/: Main.hs
backend/conf/: config.dev.yaml
backend/src/Demo/Backend/: Config.hs  Main.hs  Server.hs
backend/src/Demo/Backend/Controller/: User.hs
backend/src/Demo/Backend/Persist/: Model.hs  Prelude.hs  User.hs
backend/src/Demo/Backend/Service/: User.hs
backend/src/Demo/Common/: API.hs
backend/src/Demo/Common/API/: Prelude.hs  User.hs
backend/test/integration/: Main.hs  User.hs
backend/test/unit/: Main.hs
