cabal-version:      3.6
name:               backend
version:            0.1.0.0
license:            BSD-3-Clause
author:             kokobd
maintainer:         contact@zelinf.net
category:           Web

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Demo.Backend.Main
    Demo.Backend.Server
    Demo.Common.API
    Demo.Common.API.User
    Demo.Common.API.Prelude
    Demo.Backend.Controller.User
    Demo.Backend.Service.User
    Demo.Backend.Persist.Model
    Demo.Backend.Persist.Prelude
    Demo.Backend.Persist.User
    Demo.Backend.External.SqlDatabase
  default-extensions:
    GADTs
    DataKinds
    KindSignatures
    TypeFamilies
    FlexibleContexts
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    LambdaCase
  build-depends:
    , base ^>=4.16
    , lens
    , text
    , bytestring
    , aeson
    , mtl
    , transformers
    , time
    , effectful
    , effectful-th
    , persistent
    , persistent-sqlite
    , servant
    , servant-server
    , wai
    , warp
    , resource-pool
    , unliftio-core
    
executable server
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , backend

test-suite unit
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test/unit
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , backend
    , tasty
    , tasty-hunit

test-suite integration
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test/integration
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , backend
    , tasty
    , tasty-wai
